--- a/fitness-and-health-website/trainings-plan-old.html
+++ b/fitness-and-health-website/trainings-plan-old.html
@@ -14,7 +14,7 @@
             <a style="color: yellow" href="trainings-plan.html"><span>⮐</span></a>
         </div>
     </div>
-    <h1 class="title">Trainingspläne für Älteren</h1>
+    <h1 class="title">Trainingspläne für Ältere</h1>
     <div class="logo-wrapper">
         <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
     </div>
