--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link href="stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 
     <title>FitnessAndHealth</title>
 </head>
-<body>
+<body style = "background-color: black">
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
     <div class="container-fluid">
@@ -94,7 +95,7 @@
 
 
 
-<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
+<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%; background-color: black">
 
     <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
 
