changed colors and added new logo

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="icones/LOGO_05-remove.png" alt="Home" width="50" height="50">
+            <img src="icones/new-logo-blue.png" alt="Home" width="50" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -104,7 +104,7 @@
             <div class="row">
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: yellow">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4" style = "color: #118ab2">Unsere Welt</h5>
 
                     <ul class="list-unstyled mb-4">
                         <li>
@@ -127,7 +127,7 @@
 
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: yellow">Karriere</h5>
+                    <h5 class="text-uppercase mb-4" style = "color: #118ab2">Karriere</h5>
 
                     <ul class="list-unstyled">
                         <li>
@@ -139,7 +139,7 @@
 
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: yellow">Kontaktiere uns</h5>
+                    <h5 class="text-uppercase mb-4" style = "color: #118ab2">Kontaktiere uns</h5>
 
                     <div class="form-outline form-white mb-4">
                         <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
