first step to fix the navbar bug on the shoppage, only the logo is missing anymore

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -15,6 +15,7 @@
 
 
 
+
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
@@ -27,7 +28,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link textInNavBar" href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" alt="Shop" width="20" height="20" > Shop
+                        <img src="icones/bx-shopping-bag.svg" style="color: white" alt="Shop" width="20" height="20"> Shop
                     </a>
                 </li>
                 <li class="nav-item">
