Change the color to another one and created a new hover effect on the nav bar

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -104,7 +104,7 @@
             <div class="row">
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: #118ab2">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
 
                     <ul class="list-unstyled mb-4">
                         <li>
@@ -127,7 +127,7 @@
 
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: #118ab2">Karriere</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
 
                     <ul class="list-unstyled">
                         <li>
@@ -139,7 +139,7 @@
 
 
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: #118ab2">Kontaktiere uns</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
 
                     <div class="form-outline form-white mb-4">
                         <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
