--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -23,6 +23,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
+                    <a class="nav-link textInNavBar" href="index.html">
+                        <img src="icones/bxs-home.svg" alt="Shop" width="20" height="20"> Home
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link textInNavBar" href="shop.html">
                         <img src="icones/bx-shopping-bag.svg" alt="Shop" width="20" height="20"> Shop
                     </a>
@@ -149,7 +154,7 @@
                 </div>
 
                 <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/LOGO_05-remove.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                    <img src="icones/new-logo-blue.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
                 </div>
             </div>
 
