--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -22,6 +22,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
+                    <a class="nav-link textInNavBar" href="index.html">
+                        <img src="icones/bxs-home.svg" class = "changeColor" alt="Shop" width="20" height="20"> Home
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link textInNavBar"  href="shop.html">
                         <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Shop
                     </a>
@@ -162,7 +167,7 @@
             <div class="row">
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: yellow">Unsere Welt</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Unsere Welt</h5>
 
                     <ul class="list-unstyled mb-4">
                         <li>
@@ -185,7 +190,7 @@
 
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: yellow">Karriere</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Karriere</h5>
 
                     <ul class="list-unstyled">
                         <li>
@@ -197,7 +202,7 @@
 
                 <!--Grid column-->
                 <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <h5 class="text-uppercase mb-4" style = "color: yellow">Kontaktiere uns</h5>
+                    <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
 
                     <div class="form-outline form-white mb-4">
                         <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects" style = "color: white">Klicke hier</a>
@@ -207,7 +212,7 @@
                 </div>
                 <!--Grid column-->
                 <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/LOGO_05-remove.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                    <img src="icones/new-logo-blue.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
                 </div>
             </div>
             <!--Grid row-->
