--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -27,6 +27,11 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
+                    <a class="nav-link textInNavBar" href="index.html">
+                        <img src="icones/bxs-home.svg" class = "changeColor" alt="Shop" width="20" height="20"> Home
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link textInNavBar"  href="shop.html">
                         <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Shop
                     </a>
