added the gradient to the hover effects on the picture in the about us page

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-            <img src="icones/new-logo-blue.png" alt="Home" width="50" height="50">
+            <img src="icones/new-logo-gredient.png" alt="Home" width="50" height="50">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -158,7 +158,7 @@
 
                 </div>
                 <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
-                    <img src="icones/new-logo-blue.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                    <img src="icones/new-logo-gredient.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
                 </div>
             </div>
 
