shortened the quotes and shortened the header of the text to Our mission, because it is smaller and sounds better

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -66,17 +66,17 @@
 
                 <h2 class="quote2 set2 col-12">Muscle gain is the best medicine</h2>
                 <h2 class="quote3 set2 col-12">Healthy eating is the key to a healthy mind</h2>
-                <h2 class="quote4 set2 col-12">Mindfulness and self-care are essential for a healthy body</h2>
+                <h2 class="quote4 set2 col-12">Sweat now, shine later</h2>
                 <h2 class="quote5 set2 col-12">Stay strong, stay motivated, and stay consistent</h2>
 
-                <h2 class="quote2 set3 col-12">The journey to fitness is not a destination, but a journey</h2>
+                <h2 class="quote2 set3 col-12">Your only limit is you</h2>
                 <h2 class="quote3 set3 col-12">Be yourself, be confident, and be strong</h2>
-                <h2 class="quote4 set3 col-12">Remember, the greatest glory in living lies not in never falling</h2>
-                <h2 class="quote5 set3 col-12">The future belongs to those who believe in the beauty of their dreams</h2>
+                <h2 class="quote4 set3 col-12">Small steps, big changes</h2>
+                <h2 class="quote5 set3 col-12">One more rep, one step closer</h2>
 
                 <h2 class="quote2 set4 col-12">Stay positive, stay focused, and stay energized</h2>
-                <h2 class="quote3 set4 col-12">The world is a stage, and all the actors must play their part</h2>
-                <h2 class="quote4 set4 col-12">The key to success is not to stop questioning, but stop chase the wrong answer</h2>
+                <h2 class="quote3 set4 col-12">Don't stop until you're proud</h2>
+                <h2 class="quote4 set4 col-12">Stronger every day</h2>
                 <h2 class="quote5 set4 col-12">Believe in yourself, and you'll achieve great things</h2>
             </div>
         </div>
@@ -85,7 +85,7 @@
                 <img src="icones/background.webp" alt="Logo" class="pictureOfMan">
                 <div class="row justify-content-center">
                     <div class="col-md-10 col-lg-8">
-                        <h2 class="text-center mb-4 text-light headerOfText">Was dich auf unserer Webseite erwartet</h2>
+                        <h2 class="text-center mb-4 text-light headerOfText">Unsere Mission</h2>
                         <p class="text-light textContent">
                             Diese Webseite ist eine an Menschen mit Altersbeschwerden, Verletzungen und jeglichen behindernden Umständen angepasste Fitnesswebseite.
                             Fit zu bleiben bei Beeinträchtigungen ist schwer, deswegen stellt diese Webseite leichte, verständnisvolle und gut umsetzbare Trainingspläne bereit.
