--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -13,9 +13,6 @@
 <body class="index">
 
 
-
-
-
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
     <div class="container-fluid">
 
@@ -33,7 +30,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar"  href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Shop
+                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Showroom
                     </a>
                 </li>
                 <li class="nav-item">
@@ -56,7 +53,7 @@
     </div>
 </nav>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" style = "pointer-events: none;">
+<div id="carouselExampleSlidesOnly" class="carousel slide full-width-carousel" data-bs-ride="carousel" style="pointer-events: none;">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="image-container">
@@ -66,7 +63,7 @@
                         Willkommen
                     </h1>
                     <h2 class="picture-subheader">
-                        Fitness&Health Shop
+                        Fitness&Health Showroom
                     </h2>
                 </div>
             </div>
@@ -112,6 +109,9 @@
         </div>
     </div>
 </div>
+
+
+
 
 
 
