--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-nutrition.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <title>Ernährung</title>
 </head>
 <body style="background-color: black; overflow: auto; margin: 0; padding: 0;">
@@ -51,11 +51,143 @@
     </div>
 </nav>
 
-<!-- Main Content -->
-<div class="container" style="margin-top: 3.5%">
+<!-- Hero Section -->
+<section class="text-center py-5" style="margin-top: 5%">
+    <h1 class="display-4 title-nutrition title"  >Ernährungspläne</h1>
+    <p class="text-light lead">Individuelle Empfehlungen für ältere Menschen und Menschen mit Behinderungen.</p>
+</section>
 
+<div class="container my-5">
+    <!-- Diabetes -->
+    <div class="row mb-5">
+        <div class="col-lg-4">
+            <h2 class="title">Diabetes</h2>
+            <p class="text-light">Eine ausgewogene Ernährung ist für Menschen mit Diabetes von entscheidender Bedeutung. Es ist wichtig, den Blutzuckerspiegel stabil zu halten, indem man Lebensmittel mit einem niedrigen glykämischen Index (GI) bevorzugt. Diese Lebensmittel erhöhen den Blutzuckerspiegel langsamer und sind besser für die langfristige Blutzuckerregulation.</p>
+            <p class="text-light">Empfohlene Lebensmittel: Vollkornprodukte, Hülsenfrüchte, Gemüse, mageres Fleisch und gesunde Fette. Zuckerhaltige Lebensmittel und raffinierte Kohlenhydrate sollten vermieden werden.</p>
+        </div>
+        <div class="col-lg-8">
+            <div class="card shadow">
+                <div class="card-body bg-dark text-light">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                        <tr>
+                            <th>Mahlzeit</th>
+                            <th>Beispiel</th>
+                            <th>Hinweis</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Frühstück</td>
+                            <td>Haferbrei mit Mandeln und Beeren</td>
+                            <td>Haferflocken haben einen niedrigen GI und bieten langanhaltende Energie.</td>
+                        </tr>
+                        <tr>
+                            <td>Mittagessen</td>
+                            <td>Gegrilltes Hähnchen mit Quinoa und Gemüse</td>
+                            <td>Quinoa ist eine ausgezeichnete Quelle für komplexe Kohlenhydrate und Ballaststoffe.</td>
+                        </tr>
+                        <tr>
+                            <td>Abendessen</td>
+                            <td>Gebratener Lachs mit Zucchini-Nudeln</td>
+                            <td>Omega-3-Fettsäuren im Lachs unterstützen die Herzgesundheit.</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <p class="text-light mt-4">Es ist auch hilfreich, regelmäßig kleinere Mahlzeiten zu sich zu nehmen, um den Blutzuckerspiegel stabil zu halten. Die Anpassung der Mahlzeiten an die persönlichen Bedürfnisse ist ebenfalls wichtig, um die bestmöglichen Ergebnisse zu erzielen.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="col-lg-4">
+            <h2 class="title">Mobilitätseinschränkungen</h2>
+            <p class="text-light">Menschen mit Mobilitätseinschränkungen benötigen eine ballaststoffreiche Ernährung, um die Verdauung zu fördern und das Risiko von Verstopfungen zu verringern. Zudem sollte der Fokus auf einer ausreichenden Zufuhr von Nährstoffen wie Eisen, Vitamin D und Kalzium liegen, um Knochen und Gelenke zu stärken.</p>
+            <p class="text-light">Empfohlene Lebensmittel: Vollkornprodukte, Hülsenfrüchte, grüne Blattgemüse, mageres Fleisch, Fisch und Milchprodukte. Vermeiden Sie stark verarbeitete Lebensmittel, die oft wenig Nährstoffe enthalten.</p>
+        </div>
+        <div class="col-lg-8">
+            <div class="card shadow">
+                <div class="card-body bg-dark text-light">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                        <tr>
+                            <th>Mahlzeit</th>
+                            <th>Beispiel</th>
+                            <th>Hinweis</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Frühstück</td>
+                            <td>Griechischer Joghurt mit Chiasamen und Beeren</td>
+                            <td>Eine hervorragende Quelle für Protein und Ballaststoffe.</td>
+                        </tr>
+                        <tr>
+                            <td>Mittagessen</td>
+                            <td>Linsensuppe mit Vollkornbrot</td>
+                            <td>Linsen bieten nicht nur Ballaststoffe, sondern auch pflanzliches Eiweiß.</td>
+                        </tr>
+                        <tr>
+                            <td>Abendessen</td>
+                            <td>Süßkartoffeln mit Kräuterquark</td>
+                            <td>Süßkartoffeln sind reich an Vitamin A und Quark liefert Kalzium für die Knochenstärkung.</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <p class="text-light mt-4">Es ist wichtig, regelmäßig zu essen, um die Blutzuckerwerte und den Energiepegel stabil zu halten. Zusätzlich sollten Mahlzeiten in kleinen Portionen über den Tag verteilt werden, um den Magen nicht zu überlasten und die Verdauung zu erleichtern.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="row mb-5">
+        <div class="col-lg-4">
+            <h2 class="title">Bluthochdruck</h2>
+            <p class="text-light">Für Menschen mit Bluthochdruck ist eine salzarme Ernährung von großer Bedeutung. Es ist wichtig, auf eine ausreichende Aufnahme von Kalium, Magnesium und Kalzium zu achten, da diese Mineralstoffe helfen, den Blutdruck zu regulieren.</p>
+            <p class="text-light">Empfohlene Lebensmittel: Obst, Gemüse, fettarme Milchprodukte, mageres Fleisch und Nüsse. Reduzieren Sie den Salzgehalt in der Ernährung und bevorzugen Sie frische statt verarbeiteter Lebensmittel.</p>
+        </div>
+        <div class="col-lg-8">
+            <div class="card shadow">
+                <div class="card-body bg-dark text-light">
+                    <table class="table table-dark table-striped">
+                        <thead>
+                        <tr>
+                            <th>Mahlzeit</th>
+                            <th>Beispiel</th>
+                            <th>Hinweis</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Frühstück</td>
+                            <td>Vollkornbrot mit Avocado und Tomaten</td>
+                            <td>Avocados sind reich an Kalium und helfen, den Blutdruck zu senken.</td>
+                        </tr>
+                        <tr>
+                            <td>Mittagessen</td>
+                            <td>Gegrilltes Hähnchen mit grünem Salat und Olivenöl</td>
+                            <td>Olivenöl enthält einfach ungesättigte Fettsäuren, die gut für das Herz sind.</td>
+                        </tr>
+                        <tr>
+                            <td>Abendessen</td>
+                            <td>Gedünsteter Fisch mit Brokkoli und Süßkartoffeln</td>
+                            <td>Brokkoli liefert Kalzium, das zur Blutdruckregulation beiträgt.</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <p class="text-light mt-4">Achten Sie darauf, das Salzen zu vermeiden und gewöhnen Sie sich an, Gewürze wie Knoblauch, Kräuter und Zitrone zu verwenden, um den Geschmack der Speisen zu verbessern.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
+
+
+
 
 <div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
 
