cleared up all pages

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body class="index">
+<body class="index" style="background-color: black">
 
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
@@ -53,7 +53,7 @@
     </div>
 </nav>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide full-width-carousel" data-bs-ride="carousel" style="pointer-events: none;">
+<div id="carouselExampleSlidesOnly" class="carousel slide full-width-carousel" data-bs-ride="carousel" style="pointer-events: none; background-color: black">
     <div class="carousel-inner">
         <div class="carousel-item active">
             <div class="image-container">
@@ -115,20 +115,19 @@
 
 
 
-<br>
-<br>
-<br>
-<div class="top-search-products">
 
+<div class="top-search-products">
+    <br>
+    <br>
     <h1 style="text-align: center; color: #D3D3D3">
         Produkte
     </h1>
 
     <input type="text" class="form-check-label" style="margin-left: auto;" placeholder="Search for products...">
 </div>
-<hr class="bg-warning" style="height: 0.5rem;">
 
-<section class="py-5">
+
+<section class="py-5" style="background-color: black">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-5">
@@ -330,13 +329,13 @@
         </div>
     </div>
 </section>
-<div class="page-turner">
+<div class="page-turner" style="background-color: black; margin-bottom: 5%">
     <!--
     The idea here is to create a switcher. There is like  Page 1 >
     if you click the button to the left or right you come there to see the other products.
     To do that we need javascript, so we have to wait. This is just a comment to remember this idea.
     -->
-    <p style="text-align: center; color: white"><button><-</button>Page 1 <button>-></button></p>
+    <p style="text-align: center; color: white; margin: 0; background-color: black"><button><-</button>Page 1 <button>-></button></p>
 </div>
 </body>
 </html>
