--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -2,9 +2,11 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-about-us.css">
+
     <title>Über uns</title>
 </head>
 <body style = "background-color: black; overflow-x: hidden">
@@ -49,6 +51,7 @@
     </div>
 </nav>
 
+<h1 class = "h1-in-about-us">Über uns</h1>
 <!-- Team Members Section -->
 <div class="container mt-5">
     <!-- Jan -->
