--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -53,7 +53,7 @@
 
 <!-- Hero Section -->
 <section class="text-center py-5" style="margin-top: 5%">
-    <h1 class="display-4 title-nutrition title"  >Ernährungspläne</h1>
+    <h1 class="title-nutrition title"  >Ernährungspläne</h1>
     <p class="text-light lead">Individuelle Empfehlungen für ältere Menschen und Menschen mit Behinderungen.</p>
 </section>
 
