added a formular where you can input your data in the nutrition page and changed the font on the whole website

--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -9,7 +9,7 @@
 
     <title>Über uns</title>
 </head>
-<body style = "background-color: black; overflow-x: hidden">
+<body style = "background-color: black; overflow-x: hidden; font-family: Merriweather, sans-serif">
 
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
     <div class="container-fluid">
@@ -51,7 +51,7 @@
     </div>
 </nav>
 
-<h1 class = "h1-in-about-us">Über uns</h1>
+<h1 class = "h1-in-about-us" style="margin-top: 5%">Über uns</h1>
 <!-- Team Members Section -->
 <div class="container mt-5">
     <!-- Jan -->
