changed the color from yellow to blue

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -11,10 +11,11 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black">
+<!-- Sticky Top Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black" >
     <div class="container-fluid">
-        
-            <img src="icones/new-logo-gredient.png" alt="Home" width="50" height="50">
+
+        <img src="icones/new-logo-gredient.png" alt="Home" width="50" height="50">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -53,6 +54,7 @@
 
 <div class="content" style="clear: left">
     <header class="hero">
+        <h1>Trainingspläne</h1>
         <p>Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und
             Wohlbefinden zu fördern.</p>
     </header>
