changed the name showroom to products

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -30,7 +30,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar"  href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Showroom
+                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
                     </a>
                 </li>
                 <li class="nav-item">
@@ -357,7 +357,7 @@
                         <label for="category" class="form-label text-dark">Kategorie</label>
                         <select class="form-select" id="category" required>
                             <option value="" disabled selected>Wähle eine Kategorie</option>
-                            <option value="medizin">Medizin</option>
+                            <option value="medizin">Supplemente</option>
                             <option value="fitness">Fitness</option>
                             <option value="ernährung">Ernährung</option>
                         </select>
@@ -403,7 +403,7 @@
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="text-white hover-effects">Shop</a>
+                            <a href="shop.html" class="text-white hover-effects">Produkte</a>
                         </li>
                         <li>
                             <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
