--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -29,7 +29,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link textInNavBar"  href="shop.html">
-                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Showroom
+                        <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
                     </a>
                 </li>
                 <li class="nav-item">
@@ -120,7 +120,7 @@
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="text-white hover-effects">Shop</a>
+                            <a href="shop.html" class="text-white hover-effects">Produkte</a>
                         </li>
                         <li>
                             <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
