added headers to subpages

--- a/fitness-and-health-website/trainings-plan-disabled.html
+++ b/fitness-and-health-website/trainings-plan-disabled.html
@@ -49,7 +49,10 @@
     </div>
   </div>
 </nav>
-
 </div>
+
+<header class="hero">
+  <h1>Trainingspläne für Beeinträchtigte</h1>
+</header>
 </body>
 </html>
