--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -269,7 +269,7 @@
 
                     <ul class="list-unstyled mb-4">
                         <li>
-                            <a href="shop.html" class="text-white hover-effects">Shop</a>
+                            <a href="shop.html" class="text-white hover-effects">Produkte</a>
                         </li>
                         <li>
                             <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
