--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -76,7 +76,7 @@
                         Willkommen
                     </h1>
                     <h2 class="picture-subheader">
-                        Fitness&Health Showroom
+                        Fitness&Health Produkte
                     </h2>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                         Willkommen
                     </h1>
                     <h2 class="picture-subheader">
-                        Fitness&Health Showroom
+                        Fitness&Health Produkte
                     </h2>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                         Willkommen
                     </h1>
                     <h2 class="picture-subheader">
-                        Fitness&Health Showroom
+                        Fitness&Health Produkte
                     </h2>
                 </div>
             </div>
