forgot to change all shop names

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -63,7 +63,7 @@
                         Willkommen
                     </h1>
                     <h2 class="picture-subheader">
-                        Fitness&Health Showroom
+                        Fitness&Health Produkte
                     </h2>
                 </div>
             </div>
