Added hover effects in the footer

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -146,7 +146,7 @@
                     <h5 class="text-uppercase mb-4 text-in-fotter">Kontaktiere uns</h5>
 
                     <div class="form-outline form-white mb-4">
-                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "text-white hover-effects">Klicke hier</a>
 
                     </div>
 
