change the hover effect on the submit button so it is only black

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -111,7 +111,7 @@
                     </div>
 
                     <!-- Submit Button -->
-                    <button type="button" class="btn btn-custom w-100" onclick="calculateCalories()">Absenden</button>
+                    <button type="button" class="btn btn-custom w-100" onclick="calculateCalories()" style = "color: black">Absenden</button>
 
                 </form>
             </div>
